fixed url overflow in event export section

--- a/app/styles/components/events/view/export.scss
+++ b/app/styles/components/events/view/export.scss
@@ -32,3 +32,7 @@
 .url {
   padding: 0 1em !important;
 }
+
+.segment pre {
+  overflow-x: scroll;
+}
